--- a/src/spiderbot_controllers/config/spiderbot_controllers.yaml
+++ b/src/spiderbot_controllers/config/spiderbot_controllers.yaml
@@ -2,22 +2,22 @@ controller_manager:
   ros__parameters:
     update_rate: 50
 
-    fr_leg_controller:
+    front_right_leg_controller:
       type: joint_trajectory_controller/JointTrajectoryController
 
-    fl_leg_controller:
+    front_left_leg_controller:
       type: joint_trajectory_controller/JointTrajectoryController
 
-    br_leg_controller:
+    back_right_leg_controller:
       type: joint_trajectory_controller/JointTrajectoryController
 
-    bl_leg_controller:
+    back_left_leg_controller:
       type: joint_trajectory_controller/JointTrajectoryController
 
     joint_state_broadcaster:
       type: joint_state_broadcaster/JointStateBroadcaster
 
-fr_leg_controller:
+front_right_leg_controller:
   ros__parameters:
     joints:
       - joint_h_fr
@@ -30,7 +30,7 @@ fr_leg_controller:
     open_loop_control: true
     allow_integration_in_goal_trajectories: true
 
-fl_leg_controller:
+front_left_leg_controller:
   ros__parameters:
     joints:
       - joint_h_fl
@@ -43,7 +43,7 @@ fl_leg_controller:
     open_loop_control: true
     allow_integration_in_goal_trajectories: true
 
-br_leg_controller:
+back_right_leg_controller:
   ros__parameters:
     joints:
       - joint_h_br
@@ -56,7 +56,7 @@ br_leg_controller:
     open_loop_control: true
     allow_integration_in_goal_trajectories: true
 
-bl_leg_controller:
+back_left_leg_controller:
   ros__parameters:
     joints:
       - joint_h_bl
