--- a/src/spiderbot_moveit/CMakeLists.txt
+++ b/src/spiderbot_moveit/CMakeLists.txt
@@ -9,7 +9,7 @@ find_package(ament_cmake REQUIRED)
 
 
 install(
-  DIRECTORY config
+  DIRECTORY config launch rviz
   DESTINATION share/${PROJECT_NAME}
 )
 
