--- a/src/spiderbot_moveit/config/initial_positions.yaml
+++ b/src/spiderbot_moveit/config/initial_positions.yaml
@@ -1,13 +1,13 @@
 initial_position:
-  base_to_fl_hip: 0
-  base_to_fr_hip: 0
-  base_to_bl_hip: 0
-  base_to_br_hip: 0
-  fl_hip_to_fl_femur: 0
-  fl_femur_to_fl_tibia: 0
-  fr_hip_to_fr_femur: 0
-  fr_femur_to_fr_tibia: 0
-  bl_hip_to_bl_femur: 0
-  bl_femur_to_bl_tibia: 0
-  br_hip_to_br_femur: 0
-  br_femur_to_br_tibia: 0
+  joint_h_bl: 0
+  joint_hip_femur_bl: 0
+  joint_femur_tibia_bl: 0
+  joint_h_br: 0
+  joint_hip_femur_br: 0
+  joint_femur_tibia_br: 0
+  joint_h_fl: 0
+  joint_hip_femur_fl: 0
+  joint_femur_tibia_fl: 0
+  joint_h_fr: 0
+  joint_hip_femur_fr: 0
+  joint_femur_tibia_fr: 0
