--- a/src/spiderbot_moveit/config/kinematics.yaml
+++ b/src/spiderbot_moveit/config/kinematics.yaml
@@ -1,22 +1,22 @@
-fl_leg:
+front_left_leg:
   kinematics_solver: kdl_kinematics_plugin/KDLKinematicsPlugin
   kinematics_solver_search_resolution: 0.005
   kinematics_solver_timeout: 0.005
   position_only_ik: True
 
-fr_leg:
+front_right_leg:
   kinematics_solver: kdl_kinematics_plugin/KDLKinematicsPlugin
   kinematics_solver_search_resolution: 0.005
   kinematics_solver_timeout: 0.005
   position_only_ik: True
 
-bl_leg:
+back_left_leg:
   kinematics_solver: kdl_kinematics_plugin/KDLKinematicsPlugin
   kinematics_solver_search_resolution: 0.005
   kinematics_solver_timeout: 0.005
   position_only_ik: True
 
-br_leg:
+back_right_leg:
   kinematics_solver: kdl_kinematics_plugin/KDLKinematicsPlugin
   kinematics_solver_search_resolution: 0.005
   kinematics_solver_timeout: 0.005
